menu style regression fixed, jumping bug gone

--- a/instrujs/sass/_menu.scss
+++ b/instrujs/sass/_menu.scss
@@ -35,6 +35,7 @@ $mnsubmnhover  : #fff;
     -webkit-transform: translate(0, 15px) scale(.95);
     transform: translate(0, 15px) scale(.95);
     transition: transform 0.1s ease-out, opacity 0.1s ease-out;
+    pointer-events: none;
 }
 
 .menu-item {
